# Kira

./: .gitignore  01_explore_primekg.py  02_query_chembl.py  04_rank_and_evaluate.py  05_structural_similarity.py  06_whole_organism.py  07_admet_and_report.py  08_harden_benchmark.py  09_novelty_filter.py  10_selectivity_analysis.py  11_selectivity_rerank.py  12_publication_analysis.py  14_docking_smtgr.py  15_trypanosoma_platform.py  17_cross_disease_analysis.py  19_selectivity_prediction.py  21_loto_evaluation.py  22_build_target_manifest.py  CLAUDE.md  Dockerfile  LICENSE  README.md  create_script02.sh  create_script03.sh  create_script04.sh  create_script05.sh  create_script06.sh  create_script07.sh  create_script08.sh  create_script09.sh  create_script10.sh  create_script11.sh  create_script12.sh  create_script13.sh  create_script14.sh  create_script15.sh  create_script16.sh  create_script17.sh  create_script18.sh  create_script19.sh  (+11 more)
.claude/agents/: selectivity-analyst.md
.github/workflows/: ci.yml
apps/: v5_exact_core_demo.py
docs/: CLAIM_INFLATION_AUDIT.md  CONTRAST_ENGINE.md  DISPOSITION_PLAN.md  KIRA_V0_TO_V5_SCIENTIFIC_SUMMARY.md  REGENERATION_CONTRAST_SCOUT.md  RWANDA_AMR_CONTRAST_SCOUT.md  SCIENTIFIC_CONSTITUTION.md  V5_RESULTS.md  kira-final-preprint-v2.docx  kira-ground-to-god.md  kira-ml-analysis.md  kira-technical-breakdown.md  technical_report.md  the-emerging-stack.md
notebooks/: 00_v0_to_v5_evolution.ipynb  01_reproduce_v4_benchmark.ipynb  02_v5_expansion_exact_core.ipynb
results/: PROVENANCE.md  case_study_chembl155771.txt  selectivity_v3_results.txt
scripts/: reproduce_v4_v5.sh
tests/: conftest.py  test_amr_scout.py  test_causality.py  test_cell.py  test_chemistry.py  test_cli_query.py  test_contrast_schemas.py  test_contrast_tickets.py  test_delivery.py  test_design_v6_lab_campaign.py  test_divergence.py  test_drugs.py  test_energy_decomp.py  test_lab.py  test_physics_energy.py  test_physics_geometry.py  test_physics_parser.py  test_physics_topology.py  test_regeneration_scout.py  test_scoring.py  test_selectivity_map.py  test_selectivity_v3.py  test_selectivity_v4_data.py  test_selectivity_v4_features.py  test_selectivity_v5_exact_core.py  test_selectivity_v5_expand_data.py  test_selectivity_v5_tiered_core.py  test_target_manifest.py  test_targets.py
(+171 files in other folders)
